# OSP

./: Cargo.toml
src/: cli.rs  main.rs
src/core/: accounts.rs  logger.rs  mod.rs  sessions.rs  state.rs  validation.rs
src/core/database/: mod.rs  volatile.rs
src/core/ext/: handlebars.rs  mod.rs  tide_request.rs
src/core/models/: account.rs  mod.rs  session.rs
src/middleware/: logging.rs  mod.rs  user_session.rs
src/routes/: mod.rs
src/routes/api/v1/: account.rs  mod.rs
src/routes/client/: mod.rs
src/routes/client/partials/: mod.rs
src/routes/client/views/: error.rs  home.rs  login.rs  mod.rs  signup.rs
static/assets/: styles.css
static/scripts/: constants.js  login.js  signup.js  validate.js
templates/pages/: error.hbs  home.hbs  login.hbs  signup.hbs
templates/pages/layouts/: base_layout.hbs  main_layout.hbs
