[package]
name = "hag_website"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-trait = "0.1.66"
base64ct = { version = "1.6.0", features = ["alloc"] }
chrono = "0.4.23"
clap = { version = "4.1.8", features = ["derive"] }
handlebars = "4.3.6"
log = "0.4.17"
once_cell = "1.17.1"
regex = "1.7.3"
relative-path = "1.8.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.10.6"
tide = "0.16.0"
tokio = { version = "1.25.0", features = ["macros", "rt"] }
uuid = { version = "1.3.0", features = ["v4"] }
